--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: presensikaryawan
+name: presensiandroid
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">2.7.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,9 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.12.1
   shared_preferences: ^0.5.3+4
   carousel_slider: ^2.2.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - gambar/logo/
-    - gambar/icon/
-    - images/slider/
+    - images/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
