--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "presensikaryawan",
-    "short_name": "presensikaryawan",
+    "name": "presensiandroid",
+    "short_name": "presensiandroid",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
